Restauración DB, modelo de usuarios
(Continuar por 369)

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-MONGO_URI=mongodb+srv://admin:localhost3000@cluster0.ifpuz.mongodb.net/merntasks?retryWrites=true&w=majority
+MONGO_URI=mongodb+srv://admin:localhost3002@cluster0.ifpuz.mongodb.net/uptask?
+  retryWrites=true&w=majority
