--- a/package.json
+++ b/package.json
@@ -1,23 +1,32 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "description": "Aprendiendo MERN Stack",
-  "main": "index.ts",
+  "description": " Aprendiendo MERN Stack",
+  "main": "index.js",
   "scripts": {
     "dev": "nodemon index.ts",
-    "start": "node index.js"
+    "start": "node index.ts"
   },
+  "keywords": [
+    "MERN",
+    "Node",
+    "Express",
+    "JavaScript",
+    "TypeScript"
+  ],
   "author": "laura-e24",
   "license": "ISC",
   "dependencies": {
-    "dotenv": "^16.0.0",
+    "bcrypt": "^5.1.0",
+    "dotenv": "^16.0.3",
     "express": "^4.17.3",
-    "mongoose": "^6.2.4"
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.7.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/node": "^17.0.21",
-    "nodemon": "^2.0.15",
+    "nodemon": "^2.0.20",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.2"
   }
