--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-MONGO_URI=mongodb+srv://admin:localhost3002@cluster0.ifpuz.mongodb.net/uptask?
-  retryWrites=true&w=majority
+MONGO_URI = mongodb+srv://admin:localhost3002@cluster0.ifpuz.mongodb.net/UpTask?retryWrites=true&w=majority
+
+JWT_SECRET = secRETWorD
